digiup-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digiup-app-deployment
  labels:
    app: digiup-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: digiup-app
  template:
    metadata:
      labels:
        app: digiup-app
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: digiup-bo-app-sha256-1
        image: gcr.io/digiup-364508/digiup-bo-app@sha256:e8a7be88645398154d2d20f7cbec543570c64e16ed170a2fc4b5b95899876a68
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /usr/local/tomcat8/webapps/datatdbh
            name: mypvc
      volumes:
        - name: mypvc
          persistentVolumeClaim:
            claimName: bidv-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: digiup-app-service
spec:
  type: LoadBalancer
  selector:
    app: digiup-app
  ports:    
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 31005
